# geoborn

./: README.md  geoutils.py  pyproject.toml  testing.py  utils.py
XAGM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
base_dimen/: 2dstruct  coordinates
basis/: __init__.py  linear.py  metrics.py
geoborn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
manifolds/: __init__.py  calc.py  topology.py  vectors.py
ops/: __init__.py  boolean.py  metrics  metrics.py  vectors.py
primitives/: __init__.py  linear.py  struct.py  voluminous
src/xagm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/xagm/basis/: coordinates
