[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geoborn"
version = "0.1.0"
dependencies = [
    "jax", "jaxlib",
]
# Add any dependencies you need here, e.g., ["jax", "jaxlib"]

[tool.setuptools]
# 1. Explicitly list the folders that are Python packages
packages = ["ops", "primitives", "spatiality"]

# 2. Explicitly list standalone files in your root (like utils.py)
py-modules = ["utils"]