[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xagm"
version = "0.2.0"
dependencies = [
    "jax", "jaxlib", "jaxtyping", "diffrax"
]

readme = "README.md"
# Add any dependencies you need here, e.g., ["jax", "jaxlib"]

[tool.setuptools.packages.find]
# This tells setuptools to look for your code inside the 'src' folder
where = ["src"]

[tool.setuptools]
